That My WebSite

--- a/about-us.html
+++ b/about-us.html
@@ -22,11 +22,12 @@
               This site works as a portfolio, a place to<br />
               share code and thoughts.
             </p>
+            <h3>About Me :</h3>
             <p>
-              About Me Hello! My name is Zakaria and I enjoy creating websites ,
-              My interest in web development started back in 2024 when I decided
-              to try learn html and css — I really enjoyed it and am now
-              learning JavaScript ! <br />
+              Hello! My name is Zakaria and I enjoy creating websites , My
+              interest in web development started back in 2024 when I decided to
+              try learn html and css — I really enjoyed it and am now learning
+              JavaScript ! <br />
               I am very grateful and can do any front-end site I can think of.
             </p>
             <div class="social-media">
