That My WebSite

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="text">
           <h2>Hello There,</h2>
           <h2>I'm Zakaria Bezziou</h2>
-          <h2>I'm a WebDeveloper</h2>
+          <h2>I'm a fron-end Developer</h2>
           <div class="button">
             <h3>Creat now</h3>
             <h3>My Website</h3>
