--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
           <h2>I'm Zakaria Bezziou</h2>
           <h2>I'm a fron-end Developer</h2>
           <div class="button">
-            <h3>Creat now</h3>
-            <h3>My Website</h3>
+            <h3>My Works</h3>
+            <h3>
+              <a href="https://github.com/Zakaria-bz" target="_blank">Github</a>
+            </h3>
           </div>
           <div class="images">
             <img src="img/Humaaans - Wireframe.png" alt="" />
